cm-single-value-as-env.yaml
#PASSING CONFIGMAP'S SINGLE VALUE AS ENV VARIABLE


kind: Pod
apiVersion: v1
metadata:
  name: cmasenv
spec:
  containers:
  -  name: c1
     image: nginx
     ports:
     -  containerPort: 80
