deployment-rolling-update.yaml
#ROLLING UPDATE

nano deploy.yaml

kind: Deployment
apiVersion: apps/v1beta1
metadata: 
  name: deploy
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: c1
        image: aamirpinger/flag
        ports:
        - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
