deployment.yaml
#DEPLOYMENT
nano deploy.yaml

kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: deploy
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: test
    spec:
    containers:
    - name: c1
      image: nginx
      ports:
      - containerPort: 80
 
kubectl create -f deploy.yaml --record
kubectl expose deployment deploy --port=8080 --target-port=80 --type=LoadBalancer -n testns
kubectl get svc
