env-var-directly.yaml
#PASSING ENVIRONMENT VARIABLES DIRECTLY

kind: Pod
apiVersion: v1
metadata:
  name: pod
spec:
  containers:
  - name: c1
    image: nginx
