pod.yaml
kind: Pod
apiVersion: v1
metadata: 
  name: pv-pod
spec:
  volumes:
  - name: pvcvol
    persistentVolumeClaim:
      claimName: pvc
  containers:
  - name: pvc-con
    image: aamirpinger/logfile_nodejs
    volumeMounts:
    - name: pvcvol
      mountPath: /data
