secret-as-env-var.yaml
#SECRET AS ENV

nano pod.yaml

kind: Pod
apiVersion: v1
metadata: 
  name: secasenv
spec:
  containers:
  - name: c1
    image: nginx
kubectl create -f pod.yaml

kubectl exec secasenv -it sh
env
