secret-as-volume.yaml
#SECRET AS VOLUME

nano secasvol.env

first=fahad
last=shaikh

kubectl create secret generic mysec --from-env-file=secasvol.env
kubectl get sec

---

nano pod.yaml

kind: Pod
apiVersion: v1
metadata:
  name: secasenv
spec:
  volumes:
  - name: secvol
    secret:
      secretName: mysec
  containers:
  - name: c1
    image: nginx
    volumeMounts:
    - name: secvol
      mountPath: /data
