service-account.yaml
#Create an nginx pod that uses 'myuser' as a SERVICE ACCOUNT

kind: ServiceAccount
apiVersion: v1
metadata:
  name: myuser


kind: Pod
apiVersion: v1
metadata:
  name: pod
spec:
  serviceAccountName: myuser
  containers:
  - name: c1
    image: nginx
  ports:
  - containerPort: 80

OR
kubectl create sa mysa -n testns
kubectl run nginx --image=nginx --restart=Never --serviceaccount=mysa -o yaml --dry-run > pod.yaml
