service.yaml
#SERVICE

kind: Service
apiVersion: v1
metadata:
  name: svc
spec:
  ports:
  - port: 8080
    targetPort: 80
  type: LoadBalancer
  selector: 
    app: production
