network-policy-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx 
spec:
  podSelector:                            # select pods on which Policy will be applied 
    matchLabels:                          # with this label 
      run: nginx                          # labels of the pods
  policyTypes: 
  - Ingress
  ingress:                                # allow ingress traffic
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 80
-------------------------
spec:
  podSelector:
    matchLabels:
      app: database
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: webserver
    ports:
    - port: 5432
---------------------------
spec:
  podSelector: 
    matchLabels:
      app: test
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          access: "true"
    ports:
    - port: 5432
---------------------------
ingress:
- from:
  - ipBlock:
      cidr: 192.168.1.0/24
